css/main.css
html {
  background-color: #f2f1ed;
  font-family: "Open Sans", sans-serif;
}

#about {
  /*padding: 1.5em;*/
}

.max-width {
  max-width: 1200px;
  margin: 0 auto;
}

#about > .grid,
#content > .grid {
  margin-bottom: 2.5em;
}

.red {
  color: #E1533C;
}

.wordmark {
  text-align: center;
  margin: 0 auto;
}

.wordmark img {
  max-width: 200px;
  min-width: 150px;
  width: 70%;
}

header nav {
  text-align: center;
  font-family: 'Sintony', sans-serif;
}

header nav li {
  margin-bottom: 1.75em;
  display: block;
  width: 100%;
}

header nav li a {
  color: #204A94;
  margin-right: 0;
  text-decoration: none;
  transition-timing-function: ease;
}

header nav li a:hover {
  border-bottom: 3px solid #E1533C;
  transition: .25s;
}

/* BANNER */

.banner-container {
  width: 100%;
  padding: 300px 0;
  margin-bottom: .5em;
  background-image: url("../images/cat-lady.jpg");
  background-position: center center;
  background-repeat: no-repeat;
  position: relative;
  background-size: cover;
}

.banner-container::before {
  background: rgba(0, 0, 0, 0)
  -webkit-linear-gradient(top left, rgba(19, 47, 86, .8) 0%, rgba(36, 87, 160, .3) 100%) repeat;
  content: "";
  position: absolute;
  display: block;
  height: 100%;
  left: 0;
  top: 0;
  width: 100%;
}

.banner-wrapper h1 {
  margin-top: 2em;
  color: #fff;
  font-family: 'Sintony', sans-serif;
  text-shadow: 0 0 8px #000;
}

.banner-wrapper p {
  margin-top: 6em;
  color: #fff;
  text-shadow: 0 0 8px #000;
}

/*.clip-left {
  -webkit-clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
  clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
}

.clip-right {
  -webkit-clip-path: polygon(25% 0%, 100% 1%, 100% 100%, 25% 100%, 0% 50%);
  clip-path: polygon(25% 0%, 100% 1%, 100% 100%, 25% 100%, 0% 50%);
}*/

.main-ol {
  color: #E1533C;
  font-weight: bold;
}

.main-ol p {
  color: #000;
  font-weight: normal;
}

footer {
  background-color: #942A19;
  color: #fff;
}

footer a {
  color: #fff;
}

.connect {
  border-left: none;
  border-top: 1px solid #fff;
  padding-left: 0;
  padding-top: 1.2em;
  height: 8em;
}

@media only screen and (min-width: 60em) {

  header nav {
    text-align: left;
  }

  #about > .grid,
  #content > .grid {
    margin-bottom: 6em;
  }

}

@media only screen and (min-width: 38em) {

  .connect {
    border-top: none;
    border-left: 1px solid #fff;
    height: 11em;
    padding-left: 5%;
    padding-top: 0;
  }

  .banner-container {
    margin-bottom: 1em;
  }

}

@media only screen and (min-width: 25em) {

  header nav ul li {
    display: inline;
    margin: 0 1em;
  }

}

